--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - db
     env_file:
       - .env
+    networks:
+      - holocron_network
     command: php artisan serve --host=0.0.0.0 --port=8000
 
   db:
@@ -27,6 +29,12 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - holocron_network
 
 volumes:
   pgdata:
+  
+networks:
+  holocron_network:
+    driver: bridge
